# gem5-resources

./: .gitignore  ADDING-WORKLOADS.md  CNAME  Makefile  README.md  _config.yml  index.md  resources.json
prev-resources-json/: resources-21-2.json
src/DNNMark/: LICENSE  Makefile  README.md  generate_rand_data.cpp  run_dnnmark_template.sh
src/DNNMark/benchmarks/: CMakeLists.txt  usage.cc  usage.h
src/DNNMark/benchmarks/test_VGG/: test_VGG.cc
src/DNNMark/benchmarks/test_bwd_bn/: test_bwd_bn.cc
src/DNNMark/benchmarks/test_bwd_composed_model/: CMakeLists.txt
src/DNNMark/benchmarks/test_composed_model/: test_composed_model.cc
src/DNNMark/benchmarks/test_fwd_bypass/: test_fwd_bypass.cc
src/DNNMark/config_example/: VGG.dnntemplate  alexnet.dnnmark  bn_config.dnnmark  bypass_config.dnnmark  composed_model_config.dnnmark  fc_config.dnnmark
src/DNNMark/tools/: has_cuda_gpu.c  sanity_test.sh
src/arm-ubuntu/: README.md
src/arm-ubuntu/disk-image/: build.sh
src/arm64-ubuntu2204/: README.md
src/arm64-ubuntu2204/packer_files/: 2.m5-install.sh  arm64-hpc.json  gem5-init.sh
src/arm64-ubuntu2204/qemu_files/: get-disk-img.sh
src/asmtest/: .gitignore  LICENSE  Makefile  README.md
src/asmtest/benchmarks/: Makefile
src/asmtest/mt/: Makefile
src/boot-exit/: README.md
src/boot-exit/configs/: run_exit.py
src/boot-exit/disk-image/: build.sh
src/boot-exit/linux-configs/: config.5.4.49
src/gapbs/: README.md
src/gapbs/configs/: run_gapbs.py
src/gapbs/disk-image/: build.sh
src/getting-started/: BUILDING.md  README.md
src/getting-started/make-def-files/: make_ARM.def  make_RISCV.def  make_x86.def
src/gpu-fs/: README.md
src/gpu-fs/disk-image/: build.sh
src/gpu/DNNMark/: .gitignore  CMakeLists.txt  Dockerfile  README.md  cachefiles.csv  generate_cachefiles.py  generate_cachefiles.sh  generate_rand_data.py  setup.sh
src/gpu/DNNMark/benchmarks/test_alexnet/: test_alexnet.cc
src/gpu/DNNMark/benchmarks/test_bwd_activation/: CMakeLists.txt
src/gpu/DNNMark/benchmarks/test_bwd_composed_model/: test_bwd_composed_model.cc
src/gpu/DNNMark/benchmarks/test_bwd_dropout/: test_bwd_dropout.cc
src/gpu/DNNMark/benchmarks/test_fwd_composed_model/: test_fwd_composed_model.cc
src/gpu/DNNMark/cmake/: gflag.cmake
src/gpu/DNNMark/config_example/: VGG.dnnmark  activation_config.dnnmark  conf_convolution_block.dnnmark  conf_convolution_block.dnntemplate  conv_config.dnnmark  dropout_config.dnnmark  lrn_config.dnnmark  pool_config.dnnmark  softmax_config.dnnmark
src/gpu/DNNMark/core/include/: common.h  data_manager.h  data_png.h  dnn_utility.h  dnn_wrapper.h  dnnmark.h  gemm_wrapper.h
src/gpu/DNNMark/core/include/layers/: bn_layer.h  bypass_layer.h  lrn_layer.h  softmax_layer.h
src/gpu/DNNMark/core/src/: common.cc  dnn_config_keywords.cc  dnn_utility.cc  dnnmark.cc  gemm_wrapper.cc
src/gpu/DNNMark/data/cifar/: download.py
src/gpu/DNNMark/tools/: parse_nvprof_csv_metrics_with_plot.py
src/gpu/halo-finder/: Dockerfile  README.md
src/gpu/heterosync/: Makefile  README.md  README.txt
src/gpu/hip-samples/: Makefile  README.md
src/gpu/hsa-agent-pkt/: HSA_Interface.cpp  Makefile  README.md  square.cpp
src/gpu/lulesh/: Makefile  README.md  x.asc.golden
src/gpu/pannotia/: README.md
src/gpu/pennant/: .gitignore  Makefile  README.md
src/gpu/square/: Makefile  README.md  square.cpp
src/hack-back/: README.md
src/hack-back/disk-image/: build.sh
src/halo-finder/: .gitignore  Dockerfile
src/halo-finder/src/: RCBForceTree.cxx  cudaUtil.h  log.txt
src/heterosync/: LICENSE.txt  Makefile
src/heterosync/src/: hipLocks.h  hipLocksBarrier.h  hipLocksImpl.h  hipLocksMutexSleep.h  hipLocksMutexSpin.h  hipLocksSemaphore.h  hipLocksSemaphoreSpin.h  main.hip.cpp  syncPrims_results.sh
src/hip-samples/src/: inline_asm.cpp  stream.cpp
src/hsa-agent-pkt/: HSA_Interface.h  Makefile
src/insttest/: Makefile  insttest.c  rv64i.cpp
src/linux-kernel/: README.md
src/linux-kernel/linux-configs/: config.4.19.83  config.4.9.186  config.arm64.4.14.134  config.arm64.4.19.83  config.arm64.4.4.186  config.arm64.4.9.186  config.arm64.5.10.110  config.arm64.5.15.36  config.arm64.5.4.49  config.x86.4.14.134  config.x86.4.4.186
src/lulesh/: Makefile
src/lulesh/src/: lulesh.hip.cc
src/lupv/: README.md  config_busybox_rv64_092021
src/m5-exit-repeat/: Makefile  README.md  m5-exit-repeat.c
src/matrix-multiply/: Makefile  README.md  matrix-multiply.c
src/matrix-multiply-omp/: Makefile  README.md  matrix-omp-init.cpp  matrix-omp.cpp  matrix-omp.h
src/npb/: .gitignore  README.md
src/npb/configs/: run_npb.py
src/npb/disk-image/: build.sh
src/parsec/: README.md
src/parsec/configs/: run_parsec.py
src/parsec/configs-mesi-two-level/: run_parsec_mesi_two_level.py
src/parsec/disk-image/: build.sh
src/pennant/: Makefile  README
src/pennant/src/: Mesh.hh  (+14 more)
src/print-this/: Makefile  README.md  print-this.c
src/pthreads/: .gitignore  Makefile.common
src/riscv-boot-exit-nodisk/: README.md
src/riscv-fs/: README.md  device.dts
src/riscv-opensbi/: README.md  build-env.dockerfile
src/riscv-opensbi-alt/: Dockerfile-linux  Dockerfile-opensbi  README.md  docker-compose.yaml
src/riscv-tests/: README.md
src/riscv-ubuntu/: README.md
src/simple/: Makefile  README.md  chdir_print.c  hello.c  hello_cpp.cpp  link.ld  m5_checkpoint.c  m5_exit_addr.c  page_access_wrap.cpp  pthread_atomic.cpp  pthread_cond.cpp  pthread_create_para.cpp  pthread_create_seq.cpp  pthread_mutex.cpp  pthread_std_condition_variable.cpp  pthread_std_mutex.cpp  pthread_std_thread.cpp  stack_print.c  std_thread.cpp
src/spec-2006/: README.md
src/spec-2006-ubuntu-22.04/: README.md
src/spec-2017/: README.md
src/spec-2017-ubuntu-22.04/: README.md
src/spec2006-tests/: README.md
src/square/: Makefile  README.md  square.cpp
src/x86-gapbs-ubuntu-22.04/: README.md  x86-gapbs-benchmarks-2204.py
src/x86-ubuntu/: .gitignore  BUILDING.md  README.md  build.sh  x86-ubuntu.pkr.hcl
src/x86-ubuntu-22.04-rocm-5.4.2/: README.md
web/_includes/: resource-brief.html
web/_layouts/: default.html
(+385 files in other folders)
